--- a/Source/WpfUtility/BaseResourceDictionary.xaml
+++ b/Source/WpfUtility/BaseResourceDictionary.xaml
@@ -44,6 +44,13 @@
         <Setter Property="VerticalAlignment" Value="Stretch" />
     </Style>
 
+    <DataTemplate x:Key="ButtonLikeGroupBoxHeaderTemplate">
+        <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Width="80">
+            <Label Content="{Binding}" Foreground="Gray" 
+                   HorizontalAlignment="Center"/>
+        </Border>
+    </DataTemplate>
+    
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Styles/ButtonStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
